--- a/ProyectoConjunto_GAHerrera_JPJimenezz.ipynb
+++ b/ProyectoConjunto_GAHerrera_JPJimenezz.ipynb
@@ -131,12 +131,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98ba7fdb",
+   "cell_type": "markdown",
+   "id": "26cfd840",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Expectativas del curso:\n",
+    "Mis expectativas de este curso son principalmente aprender a usar github y gitkraken ya que son muy importantes para poder hacer un repositorio en conjunto y trabajar en una linea de tiempo sin miedo a perder el trabajo o progreso que llevamos, tambien mejorar mi manera de programar haciendola mas sistematica y funcional, tambien me gustaria que fuera un curso dinamico y con una buena comunicacion entre compañeros y profesor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1988ea07",
+   "metadata": {},
+   "source": [
+    "|       i       | 1   | 2   | 3   | 4   | 5 | 6 | 7  |\n",
+    "|:-------------:|-----|-----|-----|-----|---|---|----|\n",
+    "|    E_i (V)    | 12  | 10  | 24  | 12  | - | - | -  |\n",
+    "| $$r_i(\\Omega) $$| 0.1 | 0.5 | 0.2 | 0.5 |   |   |    |\n",
+    "| $$R_i(\\Omega) $$| 25  | 40  | 16  | 20  | 9 | 4 | 20 |\n",
+    "\n",
+    "<font color='navy'>Kemna y Vorst (1990)</font> muestran que las opciones asiáticas con media geométrica continua se pueden valuar con el mismo enfoque de las opciones plain vanilla; solo se deben cambiar los parámetros de volatilidad $\\sigma$ por $\\sigma_a$, y el costo de acarreo $b$ por $b_a$. De acuerdo con Kemna y Vorst, las fórmulas para valuar una opción de compra y una opción de venta son:\n",
+    "    \n",
+    "$$ c \\approx S_t e^{(b_A-r)(T-t)} \\phi(d_1) - Ke^{-r(T-t)} \\phi(d_2) $$ \n",
+    "\n",
+    "$$ p \\approx Ke^{-r(T-t)} \\phi(-d_2) - S_t e^{(b_A-r)(T-t)} \\phi(-d_1) $$\n",
+    "\n",
+    "con $d_1$ y $d_2$ dados por:\n",
+    "\n",
+    "$$ d_1 = \\frac{\\ln\\left(\\frac{S_{t}}{K}\\right) + \\left(b_A + \\frac{1}{2\\sigma_a^2}(T-t)\\right)}{\\sigma\\sqrt{T-t}}\n",
+    " $$\n",
+    "\n",
+    " $$ d_2 = d_1 - \\sigma_a\\sqrt{T-t}$$ \n",
+    "La función $\\phi(d)$ es la función de distribución acumulada de $E \\sim N(0,1)$. La volatilidad ajustada es igual a:\n",
+    " $$\\sigma_a = \\frac{\\sigma}{\\sqrt{3}}$$\n",
+    "mientras que el costo de acarreo ajustado es:\n",
+    "$$b_A = \\frac{1}{2}\\left(v-\\frac{\\sigma^2}{6}\\right)$$\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -173,7 +203,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -187,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
