--- a/ProyectoConjunto_GAHerrera_JPJimenezz.ipynb
+++ b/ProyectoConjunto_GAHerrera_JPJimenezz.ipynb
@@ -293,16 +293,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d39f3937",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Números primos del 0 al 100:\n",
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def es_primo(n):\n",
+    "    if n <= 1:\n",
+    "        return False\n",
+    "    for i in range(2, n):\n",
+    "        if n % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "primos = []\n",
+    "for num in range(0, 101):\n",
+    "    if es_primo(num):\n",
+    "        primos.append(num)\n",
+    "\n",
+    "print(\"Números primos del 0 al 100:\")\n",
+    "print(primos)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -316,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
